--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,11 +22,18 @@
   },
   "homepage": "https://github.com/zeteo-xulon/Dreux_Nicolas_P7_21112021#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.5.1",
     "fs": "^0.0.1-security",
+    "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "node": "^17.1.0",
     "nodemon": "^2.0.15",
+    "password-validator": "^5.2.1",
     "path": "^0.12.7",
     "sequelize": "^6.12.0-alpha.1",
     "sequelize-cli": "^6.3.0"
